Update Stream method following sonarcloud recommandation.